                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 14-08-2006 fixed: some issues with the login screen (weather not updating, conflict with autoexec.py, excessive wrong code messages).
 - 14-08-2006 fixed: do not allow movie information lookup on a bookmark.
 - 14-08-2006 added: allow user to skip still manually by pressing right or select
 - 14-08-2006 fixed: dvdplayer would not take delay in video queue in in account when skipping stills ( short still might not even display )
 - 13-08-2006 changed: renamed some variables. system.screenshotpath -> pictures.screenshotpath, mymusic.recordingpath -> musicfiles.recordingpath.
 - 13-08-2006 updated: mplayer.dll with support for aac and aac+ streams.
 - 13-08-2006 fixed: listcontrol and listcontrolex would wraparound instead of going to ondown if it where at the max page size of the list
 - 13-08-2006 fixed: forgot to comment out some code in controllist.cpp.
 - 13-08-2006 added: size() method to the ControlList in python. Updated some documentation.
 - 12-08-2006 added: xbmc.getGlobalIdleTime() method to python. Updated some documentation.
 - 12-08-2006 fixed: no control was selected on home screen if you logged on as the master user.
 - 11-08-2006 fixed: "Treat Stacks as single file" only worked for files that already had times (since 23-07-2006)
 - 11-08-2006 added: MyPrograms and MyFiles also accept $ROOT as a path when called from ActivateWindow
 - 11-08-2006 added: MyMusicFiles, MyVideoFiles, and MyPictures windows now accept $ROOT to open to the root listing when called from ActivateWindow.
			MyMusicLibrary accepts both $ROOT and Root.