@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 14-08-2006 fixed: shoutcast sorting sometimes didn't allow user to change order and locked in reverse sorting
+ - 14-08-2006 changed: better repeat code for gamepad navigation. speed increases in 3 steps
  - 14-08-2006 fixed: some issues with the login screen (weather not updating, conflict with autoexec.py, excessive wrong code messages).
  - 14-08-2006 fixed: do not allow movie information lookup on a bookmark.
  - 14-08-2006 added: allow user to skip still manually by pressing right or select
